# test_diff_drive_robot

r2d2_config/: CMakeLists.txt  package.xml
r2d2_config/config/motion/: r2d2_control.yaml
r2d2_config/launch/: r2d2_gazebo.launch  spawn_r2d2.launch.xml
r2d2_description/: CMakeLists.txt  package.xml
r2d2_description/launch/: test_description.launch
r2d2_description/rviz/: r2d2_test_description.rviz
r2d2_description/urdf/: r2d2.urdf.xacro
